result box overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ input {
 
 .Results {
   width: 75%;
-  height: 400px;
+  max-height: 360px;
   border-radius: 20px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -347,8 +347,6 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
-  margin-left: 90px;
 }
 
 .weather-status{
